unsupervised link prediction

--- a/link_prediction/codes/Untitled.ipynb
+++ b/link_prediction/codes/Untitled.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "regulated-cooler",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2eda4099",
    "metadata": {},
    "outputs": [],
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "id": "34497df0",
    "metadata": {},
    "outputs": [],
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "id": "244a28ec",
    "metadata": {},
    "outputs": [
@@ -1369,7 +1369,7 @@
        "Name: connected, dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1382,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "id": "d9f852af",
    "metadata": {},
    "outputs": [
@@ -1396,7 +1396,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "id": "80252149",
    "metadata": {},
    "outputs": [],
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "id": "04cb8773",
    "metadata": {},
    "outputs": [],
@@ -1444,12 +1444,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "d20edd06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy 0.762745767673318\n",
+      "F1-score [0.77761518 0.74574543]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.73      0.83      0.78     40994\n",
+      "           1       0.80      0.70      0.75     40994\n",
+      "\n",
+      "    accuracy                           0.76     81988\n",
+      "   macro avg       0.77      0.76      0.76     81988\n",
+      "weighted avg       0.77      0.76      0.76     81988\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "clf = RandomForestClassifier(n_estimators=100, criterion='gini', max_depth=None, min_samples_split=2, \n",
+    "clf = RandomForestClassifier(n_estimators=100, criterion='gini', max_depth=None, min_samples_split=10, \n",
     "                             min_samples_leaf=3, min_weight_fraction_leaf=0.0, max_features='auto', random_state=0)\n",
     "clf.fit(X_train, y_train)\n",
     "\n",
@@ -1464,6 +1482,129 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9e08d553",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "affiliated-graduate",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "finnish-sustainability",
+   "metadata": {},
+   "source": [
+    "### AdaBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "opponent-ladder",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import AdaBoostClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "forward-lewis",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy 0.7599892667219593\n",
+      "F1-score [0.77247711 0.746051  ]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.73      0.81      0.77     40994\n",
+      "           1       0.79      0.71      0.75     40994\n",
+      "\n",
+      "    accuracy                           0.76     81988\n",
+      "   macro avg       0.76      0.76      0.76     81988\n",
+      "weighted avg       0.76      0.76      0.76     81988\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf = AdaBoostClassifier(base_estimator=RandomForestClassifier(n_estimators=100), n_estimators=400, random_state=0)\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = clf.predict(X_test)\n",
+    "\n",
+    "print('Accuracy %s' % accuracy_score(y_test, y_pred))\n",
+    "print('F1-score %s' % f1_score(y_test, y_pred, average=None))\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "environmental-fighter",
+   "metadata": {},
+   "source": [
+    "### Bagging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "respiratory-scratch",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "from sklearn.ensemble import BaggingClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ethical-aruba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy 0.7540981607064449\n",
+      "F1-score [0.76468048 0.74251925]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.73      0.80      0.76     40994\n",
+      "           1       0.78      0.71      0.74     40994\n",
+      "\n",
+      "    accuracy                           0.75     81988\n",
+      "   macro avg       0.76      0.75      0.75     81988\n",
+      "weighted avg       0.76      0.75      0.75     81988\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf = BaggingClassifier(base_estimator=None, n_estimators=100, random_state=0)\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = clf.predict(X_test)\n",
+    "\n",
+    "print('Accuracy %s' % accuracy_score(y_test, y_pred))\n",
+    "print('F1-score %s' % f1_score(y_test, y_pred, average=None))\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "patent-honduras",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1485,7 +1626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
