--- a/link_prediction/codes/Untitled.ipynb
+++ b/link_prediction/codes/Untitled.ipynb
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "34497df0",
    "metadata": {},
    "outputs": [],
@@ -1407,21 +1407,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "80252149",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attributes = ['u','v','province', 'city', 'geoDistance', 'reviewsDiff',\n",
+    "       'scoreDiff', 'priceDiff', 'reviewsSum', 'scoreSum', 'priceSum',\n",
+    "       'specialDiets', 'cuisines', 'menu', 'covidMeasure', 'travellersChoice',\n",
+    "       'claimed'] \n",
+    "target =  'connected'\n",
+    "\n",
+    "X = dfg[attributes]\n",
+    "y = dfg[target]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=100, stratify=y)\n",
+    "\n",
+    "X_train['connected'] = y_train \n",
+    "X_test['connected'] = y_test\n",
+    "X_train.to_csv('../data/supervised_train.csv')\n",
+    "X_test.to_csv('../data/supervised_test.csv') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "electrical-yemen",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15003"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T = G.edge_subgraph([(u,v) for u,v in X_train[['u','v']].values])\n",
+    "len(T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "mobile-dispatch",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in X_train.index:\n",
+    "    \n",
+    "    u = X_train.loc[i,'u']\n",
+    "    v = X_train.loc[i,'v']\n",
+    "    \n",
+    "    common = len(set(T.neighbors(u)).intersection(set(T.neighbors(v))))\n",
+    "    union = len(set(T.neighbors(u)).union(set(T.neighbors(v))))\n",
+    "   \n",
+    "    X_train.loc[i,'common'] = common\n",
+    "    if union != 0: X_train.loc[i,'jaccards']  = common / union\n",
+    "    else : X_train.loc[i,'jaccards']  =  0\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "solid-scottish",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in X_test.index:\n",
+    "    \n",
+    "    u = X_test.loc[i,'u']\n",
+    "    v = X_test.loc[i,'v']\n",
+    "    \n",
+    "    common = len(set(T.neighbors(u)).intersection(set(T.neighbors(v))))\n",
+    "    union = len(set(T.neighbors(u)).union(set(T.neighbors(v))))\n",
+    "   \n",
+    "    X_test.loc[i,'common'] = common\n",
+    "    if union != 0: X_test.loc[i,'jaccards']  = common / union\n",
+    "    else : X_test.loc[i,'jaccards']  =  0\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "academic-export",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train.to_csv('../data/supervisedTrain.csv')\n",
+    "X_test.to_csv('../data/supervisedTest.csv') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "excess-world",
    "metadata": {},
    "outputs": [],
    "source": [
     "attributes = ['province', 'city', 'geoDistance', 'reviewsDiff',\n",
     "       'scoreDiff', 'priceDiff', 'reviewsSum', 'scoreSum', 'priceSum',\n",
     "       'specialDiets', 'cuisines', 'menu', 'covidMeasure', 'travellersChoice',\n",
-    "       'claimed'] \n",
+    "       'claimed','common','jaccards'] \n",
     "target =  'connected'\n",
     "\n",
-    "X = dfg[attributes].values\n",
-    "y = dfg[target].values\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=100, stratify=y)\n",
-    "    "
+    "\n",
+    "\n",
+    "y_train = X_train[target ].values\n",
+    "y_test = X_test[target].values\n",
+    "X_train = X_train[attributes].values\n",
+    "X_test = X_test[attributes].values\n",
+    "\n"
    ]
   },
   {
@@ -1434,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "id": "04cb8773",
    "metadata": {},
    "outputs": [],
@@ -1444,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "id": "d20edd06",
    "metadata": {},
    "outputs": [
@@ -1452,22 +1557,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy 0.762745767673318\n",
-      "F1-score [0.77761518 0.74574543]\n",
+      "Accuracy 0.8652729667756257\n",
+      "F1-score [0.87317152 0.85632528]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.73      0.83      0.78     40994\n",
-      "           1       0.80      0.70      0.75     40994\n",
+      "           0       0.82      0.93      0.87     40994\n",
+      "           1       0.92      0.80      0.86     40994\n",
       "\n",
-      "    accuracy                           0.76     81988\n",
-      "   macro avg       0.77      0.76      0.76     81988\n",
-      "weighted avg       0.77      0.76      0.76     81988\n",
+      "    accuracy                           0.87     81988\n",
+      "   macro avg       0.87      0.87      0.86     81988\n",
+      "weighted avg       0.87      0.87      0.86     81988\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "clf = RandomForestClassifier(n_estimators=100, criterion='gini', max_depth=None, min_samples_split=10, \n",
+    "clf = RandomForestClassifier(n_estimators=100, criterion='gini', max_depth=None, min_samples_split=5, \n",
     "                             min_samples_leaf=3, min_weight_fraction_leaf=0.0, max_features='auto', random_state=0)\n",
     "clf.fit(X_train, y_train)\n",
     "\n",
@@ -1504,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "id": "opponent-ladder",
    "metadata": {},
    "outputs": [],
@@ -1514,28 +1619,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "forward-lewis",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy 0.7599892667219593\n",
-      "F1-score [0.77247711 0.746051  ]\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.73      0.81      0.77     40994\n",
-      "           1       0.79      0.71      0.75     40994\n",
-      "\n",
-      "    accuracy                           0.76     81988\n",
-      "   macro avg       0.76      0.76      0.76     81988\n",
-      "weighted avg       0.76      0.76      0.76     81988\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "clf = AdaBoostClassifier(base_estimator=RandomForestClassifier(n_estimators=100), n_estimators=400, random_state=0)\n",
     "clf.fit(X_train, y_train)\n",
